fix: change path to script.js

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
                     </div>
                 </div>
             </div>
-            <div class="skills__download-button"><a href="src/Katerina Shchablovskaya CV.pdf" download>Download CV</a></div>
+            <div class="skills__download-button"><a href="src/Katerina Shchablovskaya CV.pdf" download>Download CV</a>
+            </div>
         </div>
     </section>
     <section class="contacts" id="Contacts">
@@ -223,7 +224,7 @@
             <p class="footer__date">2023</p>
         </div>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
