fix: gramm error in about

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         IT-sphere, but possibility to start studying appeared recently.My goal is to get maximum
                         knowledge about front-end
                         development and to become an in-demand specialist
-                        to realize my potention. I'm a good teamworker and I
+                        to realize my potential. I'm a good teamworker and I
                         like to communicate with different people. I also have
                         the code reading skills.
                     </div>
