--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            <div class="skills__download-button"><a href="src/Katerina Shchablovskaya CV.pdf" download>Download CV</a>
+            <div class="skills__download-button"><a href="Katerina Shchablovskaya CV.pdf" download>Download CV</a>
             </div>
         </div>
     </section>
