fix:revert commit

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     method;</li>
                                 <li class="info-list_item">create class that holds common properties which
                                     can be used in the current weather calculation;</li>
-                                <li class="info-list_item">use routing to navigate between pages;</li>
+                                <li class="info-list_item">use routing to navigate between pages</li>
                                 <li class="info-list_item">use angular material for dropdown;</li>
                             </ul>
                         </div>
